# openwrt-vpnd

./: Makefile  README.md
files/: ipsec.conf
files/etc/: ipsec.conf  ipsec.secrets
files/etc/config/: ipsec
files/etc/init.d/: vpn  vpnd
files/etc/ipsec.d/: firewall.include
files/etc/uci-defaults/: 80-ipsec
src/: CMakeLists.txt  cmd.c  cmd.h  config.c  config.h  ipsec.c  main.c  ubus.c  ubus.h  utils.h  vpn.c  vpn.h
